# aws-robomaker-small-house-world

./: CMakeLists.txt  package.xml
launch/: small_house.launch.py
models/aws_robomaker_residential_ShoeRack_01/: model.sdf
worlds/: small_house.world
